Add collection deletion
